--- a/ecotourism/src/Components/Payment/payment.css
+++ b/ecotourism/src/Components/Payment/payment.css
@@ -15,7 +15,7 @@
 
 #page {
     margin-top: 0;
-    background-image: url('https://c4.wallpaperflare.com/wallpaper/977/548/906/beach-water-pier-tropical-wallpaper-preview.jpg');
+    background-image: url('https://img.freepik.com/premium-vector/mountain-green-field-alpine-landscape-nature-with-wooden-houses_194708-1779.jpg?w=1380');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
